# chaos-et-fractales

./: .gitignore  CMakeLists.txt  LICENSE.MD  README.MD  display.py
examples/: moore_system.txt  solar_system.txt
glad/src/: glad.c
include/glad/: glad.h
simulation/: FileBuffer.cpp  Simulation.cpp  Simulation.h  SpeedIndicator.cpp  SpeedIndicator.h  main.cpp  utils.h
simulation/physics/: Matrix.cpp  Matrix.h  World.cpp  World.h
simulation/rendering/: Camera.cpp  Camera.h  Context.cpp  Context.h  Light.cpp  Light.h  Material.cpp  Material.h  Program.cpp  Program.h  Renderable.cpp  Renderable.h  RenderableSphere.cpp  RenderableSphere.h  RenderableTrajectory.cpp  RenderableTrajectory.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Window.cpp  Window.h
simulation/rendering/shaders/: 2D_fragment_shader.glslf  2D_vertex_shader.glslv  cubemap_fragment_shader.glslf  cubemap_vertex_shader.glslv  default_fragment_shader.glslf  trajectory_frag_shader.glslf  trajectory_vert_shader.glslv
sources/: FileBuffer.h  Simulation.h  SpeedIndicator.cpp  main.cpp
sources/physics/: Body.cpp  Body.h  Matrix.cpp  Matrix.h  World.h
sources/rendering/: Camera.cpp  Context.cpp  Light.cpp  Light.h  Material.cpp  Renderable.cpp  RenderableSphere.cpp  Scene.cpp  Shader.h  Sprite.cpp  Texture.h  Window.cpp
sources/rendering/shaders/: 2D_vertex_shader.glslv  cubemap_vertex_shader.glslv  default_fragment_shader.glslf  trajectory_frag_shader.glslf
